<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <EditText 
    		android:id="@+id/username"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:inputType="textPersonName"
        	android:hint="@string/login_username">
    	<requestFocus />
    </EditText>
    
    <EditText 
        	android:id="@+id/password"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:inputType="textPassword"
        	android:hint="@string/login_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_submit"
        android:onClick="submitLogin" />
        
</LinearLayout>